2016-11-28  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/amutil.c: Workaround if SOCK_NONBLOCK is not defined

2016-11-25  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/amxml.c, device-src/vfs-device.c,
	  perl/Amanda/Config.swg: Fix warning found by clang

2016-11-25  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/Amanda_Changer_aggregate.pl: Set the aggregate
	  state-filename property

2016-11-25  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/Amanda_Rest_Storages.pl: Set the aggregate state_filename

2016-11-25  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/Amanda_Rest_Storages.pl: Typo

2016-11-25  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Changer.pm: s/NO-STORAGE/ by the config_name
	* perl/Amanda/Changer/aggregate.pm: Various fix
	* server-src/driverio.c: Add comments
	* installcheck/Amanda_Changer_disk.pl: Fix comment
	* installcheck/Amanda_Rest_Storages.pl: Test chg-aggregate
	* installcheck/Installcheck/Changer.pm: Improve error message
	* installcheck/Installcheck/Rest.pm: Start starman with the
	'--workers 1' argument
	* installcheck/Amanda_Changer_aggregate.pl: New script to test
	  chg-aggregate
	* installcheck/Makefile.am (server_tests): Add
	  Amanda_Changer_aggregate

2016-11-24  Jean-Louis Martineau <JMartineau@carbonite.com>
	New setuid ambind binary to bind a socket to a priviledge port
	planner, dumper, amcheck and amservice are no longer setuid
	Use one thread by client for the connect call

	* common-src/Makefile.am (amlibexec_PROGRAMS): Add ambind
	* common-src/amanda.h (sockaddr_union): remove typedef
	* common-src/sockaddr-util.h (sockaddr_union): copied from amanda.h
	* common-src/ambind.c: New program to bind a socket to a privilege port
	* common-src/ammessage.c: Add message 2800235
	* common-src/amservice.c: Check is not suid root
	* common-src/amutil.c (priv_mutex): declare