@@ -308,6 +308,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		'inventory' => [
 				 {'current' => 1,
 				  'label' => "DISKFLAT-001",
+				  'label_match' => '1',
 				  'device_status' => '0',
 				  'reserved' => 0,
 				  'f_type' => '1',
@@ -467,6 +468,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		'label' => 'DISKFLAT-001',
 		'datestamp' => '20140509113436',
 		'write_protected' => '',
+		'label_match' => '1',
 		'process' => 'Amanda::Rest::Storages',
 		'running_on' => 'amanda-server',
 		'component' => 'rest-server',
