@@ -177,13 +177,13 @@ like($Installcheck::Run::stderr,
 ok(run('amtape', 'TESTCONF', 'show'),
     "'amtape TESTCONF show'");
 like($Installcheck::Run::stderr,
-    qr/slot +2:.*label MyTape\nslot +3/,
+    qr/slot +2:.*label MyTape \(label do not match labelstr\)\nslot +3/,
     "'amtape TESTCONF show' ..result correct");
 
 ok(run('amtape', 'TESTCONF', 'show', '2'),
     "'amtape TESTCONF show'");
 like($Installcheck::Run::stderr,
-    qr/^slot +2:.*label MyTape$/,
+    qr/^slot +2:.*label MyTape \(label do not match labelstr\)$/,
     "'amtape TESTCONF show 2' ..result correct");
 
 ok(run('amtape', 'TESTCONF', 'show', '1,3'),
@@ -252,13 +252,13 @@ like(run_err('amtape', 'TESTCONF', 'update'),
 ok(run('amtape', 'TESTCONF', 'show'),
     "'amtape TESTCONF show'");
 like($Installcheck::Run::stderr,
-    qr/slot +2:.*label MyTape\nslot +3/,
+    qr/slot +2:.*label MyTape \(label do not match labelstr\)\nslot +3/,
     "..result correct");
 
 ok(run('amtape', 'TESTCONF', 'inventory'),
     "'amtape TESTCONF inventory'");
 like($Installcheck::Run::stdout,
-    qr/slot +1: blank\nslot +2: label MyTape \(current\)\nslot +3/,
+    qr/slot +1: blank\nslot +2: label MyTape \(current\) \(label do not match labelstr\)\nslot +3/,
     "..result correct");
 
 ok(run('amtape', 'TESTCONF', 'taper'),
