@@ -60,9 +60,10 @@ sub local_message {
     } elsif ($self->{'code'} == 1100014) {
 	return "$self->{'err'}";
     } elsif ($self->{'code'} == 1100015) {
-	return sprintf("slot %3s: date %-14s label %s%s", $self->{'slot'},
+	return sprintf("slot %3s: date %-14s label %s%s%s", $self->{'slot'},
 			$self->{'datestamp'}, $self->{'label'},
-			$self->{'write_protected'}?" (Write protected)":"");
+			$self->{'write_protected'}?" (Write protected)":"",
+			$self->{'label_match'}?"":" (label do not match labelstr)");
     } elsif ($self->{'code'} == 1100016) {
 	return sprintf("slot %3s: unlabeled volume%s", $self->{'slot'},
 			 $self->{'write_protected'}?" (Write protected)":"");
@@ -2014,6 +2015,13 @@ sub show {
 	    my $st = $dev->read_label();
 	    my $write_protected = !$dev->check_writable();
 	    if ($st == $DEVICE_STATUS_SUCCESS) {
+		my $label_match = match_labelstr(
+					$self->{'storage'}->{'labelstr'},
+					$self->{'storage'}->{'autolabel'},
+					$dev->volume_label(),
+					$res->{'barcode'},
+					$res->{'meta'},
+					$self->{'storage'}->{'storage_name'});
 		$params{'user_msg'}->(Amanda::Changer::Message->new(
 					source_filename => __FILE__,
 					source_line => __LINE__,
@@ -2022,7 +2030,8 @@ sub show {
 					slot   => $last_slot,
 					datestamp  => $dev->volume_time(),
 					label  => $dev->volume_label(),
-					write_protected => $write_protected));
+					write_protected => $write_protected,
+					label_match => $label_match));
 	    } elsif ($st == $DEVICE_STATUS_VOLUME_UNLABELED) {
 		$params{'user_msg'}->(Amanda::Changer::Message->new(
 					source_filename => __FILE__,
